--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,5 +1,5 @@
 galaxy_info:
-  author: Rubini Mattia, Hammad
+  author: Rubini Mattia, Hammad Rauf
   description: Install NOIP.com Dynamic Update Client.
 
   license: license (MIT)
